--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -11,6 +11,17 @@
 }
 
 
+@font-face {
+  font-family: 'arabic';
+  src: url('/arabic.ttf') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+.font-arabic{
+  font-family: "arabic";
+}
+
+
 
 :root {
   --foreground-rgb: 0, 0, 0;
